# landing1.2

Desktop/Scorpius-Enterprise-masterr/reporting/: api.py  app.py  celery_app.py  cli.py  config.py  core.py  diff_engine.py  generator.py  models.py  pyproject.toml  run_server.py  test_system.py  test_system.py.backup_final  validators.py  widgets.py
Desktop/Scorpius-Enterprise-masterr/reporting/persistence/: db.py
Desktop/Scorpius-Enterprise-masterr/reporting/reporters/: __init__.py  base.py  csv_writer.py  html_writer.py  json_writer.py  markdown_writer.py  pdf_writer.py  sarif_writer.py
Desktop/Scorpius-Enterprise-masterr/reporting/signer/: pdf_signer.py
Desktop/Scorpius-Enterprise-masterr/reporting/templates/: charts.js
Desktop/Scorpius-Enterprise-masterr/reporting/tests/: __init__.py  test_api_routes.py  test_api_routes.py.backup_comprehensive  test_diff_engine.py  test_writer_html.py
Desktop/Scorpius-Enterprise-masterr/reporting/webhook/: notifier.py
Desktop/Scorpius1.1/config/: pyproject.toml
Desktop/Scorpius1.2-main/backend/time_machine/: .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  pyproject.toml  time_machine_app.py
Desktop/Scorpius1.2-main/backend/time_machine/legacy/: replay_models.py  start_server.py
Desktop/Scorpius1.2-main/backend/time_machine/tests/: test_comprehensive.py
Desktop/Scorpius1.2-main/backend/time_machine/ui/: .eslintrc.js  README.md
Desktop/newScorpiusm/: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  test_real_integration.py  test_scanner_standalone.py  test_security_scanner_comprehensive.py  test_security_scanner_docker_complete.py  test_vulnerability_scanner_integration.py  tsconfig.app.json  verify_api_integration.py
Desktop/newScorpiusm/.github/workflows/: production-quality.yml
Desktop/newScorpiusm/attic/config-files/: .pre-commit-config.yaml  README.md  docker-compose.scanner.yml  docker-compose.security-isolated.yml  docker-compose.security.yml  docker-compose.yml  docker-publish.yml  metadata.json  pyproject.toml  vite.config.js  vitest.config.ts
Desktop/newScorpiusm/attic/environment/: .env.example  requirements-dev.txt  requirements.prod.txt
Desktop/newScorpiusm/attic/project-management/setup-scripts/: commit_production.py  dashboard_quick_setup.ps1  dashboard_quick_setup.sh  enterprise_setup.py  final_cleanup.py  final_cleanup_safe.py  finalize_production.py  repo_cleanup.py  setup_integration.ps1  setup_production_readiness.py
Desktop/newScorpiusm/attic/project-management/status-reports/: FINAL_STATUS.md  IMPROVEMENT_ROADMAP.md  (+6 more)
Desktop/newScorpiusm/attic/scorpius-dashboard/: README.md  package-lock.json  package.json  tailwind.config.ts
Desktop/newScorpiusm/attic/test-commands/: README.md  backend-specific-tests.ps1  database-tests.ps1  docker-commands.ps1  file-cleanup-commands.ps1  frontend-tests.ps1  lint-commands.ps1  performance-tests.ps1  pre-commit-commands.ps1  security-tests.ps1  test-commands.ps1  troubleshooting-commands.ps1
Desktop/newScorpiusm/backend/: Dockerfile.prod  Dockerfile.production  MODULAR_BACKEND_COMPLETE.md  advanced_monitoring_dashboard_fixed.py  api_server.py  auth_routes_fixed.py  database.py  fix_bulk_lint_errors.py  fix_comprehensive_syntax.py  fix_fstring_syntax.py  fix_malformed_raises.py  fix_syntax_errors.py  fix_time_machine_syntax.py  fly.staging.toml  main.py  main_launcher.py  mev_guardians_routes.py  mev_ops_routes.py  models_old_deprecated.py  realtime_threat_system.py  requirements.txt  run_server.py  scanner_routes.py  scorpius.db  setup_database.py  test_api.py  test_bridge_network.py  test_startup.py  websocket_server.py
Desktop/newScorpiusm/backend/backend_additions/: dashboard_routes.py  main.py
Desktop/newScorpiusm/backend/common/: utils.py
Desktop/newScorpiusm/backend/elite_mempool_system_final/: CONTRIBUTING.md  README_SCORPIUS.md  env.example  requirements.txt  setup_database.py  simple_test.py  test_live_api.py
Desktop/newScorpiusm/backend/honeypot_detector/: honeypot_api_server.py  honeypot_detector.py
Desktop/newScorpiusm/backend/mev_bot/: config.py  mev_engine.py
Desktop/newScorpiusm/backend/reporting/: api_server_old.py  autonomous_exploit_routes.py  celery_app.py  main.py  recon_vault.py  report_generator.py  reports_routes.py  reports_routes.py.broken  scheduler_data_seeder.py  scheduler_models.py
Desktop/newScorpiusm/backend/routes/: dashboard_routes.py  mempool_fastapi.py  mempool_routes_old.py  mev_fastapi.py  mev_integration_fastapi.py  monitoring_routes.py  plugin_marketplace_fastapi.py  reports_routes.py  scanner_routes.py  settings_routes.py  system_routes.py
Desktop/newScorpiusm/backend/scorpius_bridge/: __init__.py
Desktop/newScorpiusm/backend/scorpius_quantum/: __init__.py  config.py  exceptions.py
Desktop/newScorpiusm/backend/services/: blockchain.py
Desktop/newScorpiusm/backend/settings/: __init__.py  multi_chain_config.py
Desktop/newScorpiusm/backend/tests/: test_api.py  test_api_integration.py  test_final_coverage.py  test_focused.py  test_production_readiness.py
Desktop/newScorpiusm/backend/time_machine/: time_machine_api_server.py
Desktop/newScorpiusm/config/: .gitleaks.toml
Desktop/newScorpiusm/docs/: API_ENDPOINTS_TODO.md  AUTHORS.md  BACKEND_SPECIFICATION.md  BYTECODE_ANALYZER_MODULE.md  DEPLOYMENT.md  DISTRIBUTION.md  HISTORICAL_EXPLOIT_REPLAY_COMPLETE.md  INTEGRATION_GUIDE.md  LIVE_DATA_SETUP.md  MERGE_NOTES.md  MEV_GUARDIANS_MODULE.md  MEV_OPERATIONS_MODULE.md  MEV_SIMULATION_COMPLETE.md  MODULES_OVERVIEW.md  README.md  SCANNER_BACKEND_SPEC.md  SCANNER_MODULE.md  TIME_MACHINE_MODULE.md
Desktop/newScorpiusm/frontend/: Dockerfile.dev
Desktop/newScorpiusm/frontend/src/: App.css
Desktop/newScorpiusm/monitoring/: grafana-datasources.yml
Desktop/newScorpiusm/scanner/: Dockerfile  main.py
Desktop/newScorpiusm/scripts/: README.md  cleanup-unused-files.ps1
Desktop/newScorpiusm/tests/: conftest.py
(+2797 files in other folders)
